# zbr

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  TERMS.md  package.json  postinstall.js  zbr.json
.github/workflows/: release.yml
commands/: eval.zbr  hello.zbr  ping.zbr  rank.zbr  test.zbr
docs/: categories.txt  functions.json  functions_tag.json
src/: ast.rs  bot.rs  context.rs  db.rs  error_messages.rs  executor.rs  loader.rs  main.rs  parser.rs  runtime.rs  types.rs
src/functions/: mod.rs
src/functions/actions/: mod.rs  reply.rs  replyIn.rs  sendMessage.rs
src/functions/ai/: ai.rs  aiClassify.rs  aiClassifyCtx.rs  aiCtx.rs  aiDecide.rs  aiDecideCtx.rs  aiExtract.rs  aiExtractCtx.rs  helpers.rs  imageAnalyze.rs  mod.rs
src/functions/audit/: auditCount.rs  auditEntries.rs  auditEntryAction.rs  auditEntryChanges.rs  auditEntryID.rs  auditEntryReason.rs  auditEntryTarget.rs  auditEntryUser.rs  auditLatest.rs  helpers.rs  mod.rs
src/functions/automod/: automodRule.rs  automodRuleCreate.rs  automodRuleDelete.rs  automodRuleEdit.rs  automodRules.rs  mod.rs
src/functions/blacklists/: blackListIDs.rs  blackListRoles.rs  blackListRolesIDs.rs  blackListServers.rs  blackListUsers.rs  mod.rs
src/functions/bot/: allMembersCount.rs  botCommands.rs  botID.rs  botOwnerID.rs  botTyping.rs  commandName.rs  commandTrigger.rs  commandsCount.rs  currentShard.rs  enabled.rs  executionTime.rs  mod.rs  ping.rs  serverCount.rs  serverNames.rs  slashCommandsCount.rs  slashID.rs  totalShards.rs  uptime.rs
src/functions/channels/: mod.rs  (+30 more)
(+563 files in other folders)
