[package]
name = "zbr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serenity = { version = "0.12", features = ["client", "gateway", "model", "rustls_backend"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
notify = "6"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = "0.4"
chrono-tz = "0.9"
regex = "1"
