[package]
name = "zbr"
version = "1.7.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", features = ["client", "gateway", "model", "rustls_backend"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2"
dotenv = "0.15"
notify = "6"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = "0.4"
chrono-tz = "0.9"
regex = "1"
once_cell = "1.19"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
